codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_with_history_request_shape.snap
---
source: core/tests/suite/compact.rs
expression: compact_shape
---
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:MANUAL_WITH_HISTORY_USER_ONE
04:message/assistant:FIRST_REPLY
05:message/user:<SUMMARIZATION_PROMPT>
