codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_without_prev_user_follow_up_shape.snap
---
source: core/tests/suite/compact.rs
expression: follow_up_shape
---
00:message/user:<SUMMARY:MANUAL_EMPTY_SUMMARY>
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/user:<AGENTS_MD>
03:message/user:<ENVIRONMENT_CONTEXT>
04:message/user:AFTER_MANUAL_EMPTY_COMPACT
