codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_without_prev_user_request_shape.snap
---
source: core/tests/suite/compact.rs
expression: compact_shape
---
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:<SUMMARIZATION_PROMPT>
