codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_without_prev_user_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "sectioned_request_shapes(&[(\"Local Post-Compaction History Request\",\n&requests[0]),])"
---
## Local Post-Compaction History Request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:AFTER_MANUAL_EMPTY_COMPACT
