codex-rs/core/tests/suite/snapshots/all__suite__compact__mid_turn_compaction_follow_up_shape.snap
---
source: core/tests/suite/compact.rs
expression: follow_up_shape
---
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:MID_TURN_USER
04:message/user:<SUMMARY:MID_TURN_SUMMARY>
