codex-rs/core/tests/suite/snapshots/all__suite__compact__mid_turn_compaction_request_shape.snap
---
source: core/tests/suite/compact.rs
expression: compact_shape
---
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:MID_TURN_USER
04:function_call/unsupported_tool
05:function_call_output:unsupported call: unsupported_tool
06:message/user:<SUMMARIZATION_PROMPT>
