codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_fallback_follow_up_shape.snap
---
source: core/tests/suite/compact.rs
expression: follow_up_shape
---
00:message/user:FALLBACK_USER_ONE
01:message/user:<SUMMARY:FALLBACK_SUMMARY>
02:message/developer:<PERMISSIONS_INSTRUCTIONS>
03:message/user:<AGENTS_MD>
04:message/user:<ENVIRONMENT_CONTEXT>
05:message/user:FALLBACK_USER_TWO
